--- a/hero/sass/style.scss
+++ b/hero/sass/style.scss
@@ -3,14 +3,15 @@ body {
 }
 
 #hero {
-  width: 974px;
-  height: 370px;
-  background-color: #777;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 200px;
-  display: block;
-  overflow: hidden;
+	width: 974px;
+	height: 370px;
+	background-color: #777;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 100px;
+	display: block;
+	overflow: hidden;
+	padding: 0px;
 }
 
 
@@ -25,12 +26,14 @@ section .feature{
 	}
 	
 	.feature-article{
-		width: 25%;
-		height: 290px;
+		width: 227px;
+		height: 278px;
+		padding: 4px;
+		margin-left: 4px;
+		margin-right: 4px;
 		float: left;
 		overflow: hidden;
 		background-color: #666;
-		padding: 0px;
 		.article-title{
 			border-bottom: solid 1px #fff;
 		}
