--- a/hero/sass/style.scss
+++ b/hero/sass/style.scss
@@ -1,10 +1,29 @@
+$hero-width: 974px;
+$hero-height: 370px;
+
+//There are four of these.
+$feature-title-inner-height: 20px;
+$feature-title-padding: 3px;
+$feature-title-height: $feature-title-inner-height + $feature-title-padding*2;
+
+$feature-opened-height: $hero-height - $feature-title-height*3;
+
+$feature-content-padding: 4px;
+$feature-content-height: $hero-height - $feature-title-height*4 - $feature-content-padding*2;
+
+//There are four of these.
+$feature-article-padding: 4px;
+$feature-article-height: $feature-content-height - $feature-article-padding*2;
+$feature-article-margin: 4px;
+$feature-article-width: ($hero-width - $feature-content-padding*2 - $feature-article-margin*8 - $feature-article-padding*8)/4;
+
 body {
   background-color: #eee;
 }
 
 #hero {
-	width: 974px;
-	height: 370px;
+	width: $hero-width;
+	height: $hero-height;
 	background-color: #777;
 	margin-left: auto;
 	margin-right: auto;
@@ -15,38 +34,38 @@ body {
 }
 
 
-section .feature{
+.feature{
 	padding: 0px;
 	width: 100%;
 	display: block;
 	
-	.opened{
-		height: 290px;
-		display: block;
+	.feature-content{
+		padding: $feature-content-padding;
+		height: $feature-content-height;
+		overflow: hidden;
 	}
 	
 	.feature-article{
-		width: 227px;
-		height: 278px;
-		padding: 4px;
+		width: $feature-article-width;
+		height: $feature-article-height;
+		padding: $feature-article-padding;
 		margin-left: 4px;
 		margin-right: 4px;
 		float: left;
-		overflow: hidden;
 		background-color: #666;
+		overflow: hidden;
+		
 		.article-title{
 			border-bottom: solid 1px #fff;
 		}
 	}
-	
-	.article-content{
-	}
 	.feature-title{
 		width: 100%;
-		height: 20px;
+		height: $feature-title-inner-height;
+		padding: $feature-title-padding;
 		clear: both;
 		background-color: #fff;
-		border-bottom: solid 1px #000;
+		border-bottom: 1px solid #000;
 	}
 	.article-figure{
 		float: right;
@@ -64,4 +83,9 @@ section .feature{
 			font-style: italic;
 		}
 	}
+}
+
+.feature.opened{
+	height: $feature-opened-height;
+	overflow: hidden;
 }
