--- a/hero/stylesheets/style.css
+++ b/hero/stylesheets/style.css
@@ -1,37 +1,48 @@
-/* line 20, ../sass/style.scss */
+/* line 12, ../sass/style.scss */
 body {
   background-color: #eee;
 }
 
-/* line 24, ../sass/style.scss */
+/* line 16, ../sass/style.scss */
 #hero {
   width: 974px;
   height: 370px;
   background-color: #777;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 100px;
+  position: relative;
+  top: 150px;
   display: block;
   overflow: hidden;
   padding: 0px;
 }
 
-/* line 37, ../sass/style.scss */
+/* line 31, ../sass/style.scss */
+.features ul li {
+  display: inline-block;
+}
+/* line 35, ../sass/style.scss */
+.features ul li.opened {
+  font-weight: bold;
+}
+
+/* line 42, ../sass/style.scss */
 .feature {
   padding: 0px;
   width: 100%;
   display: block;
 }
-/* line 42, ../sass/style.scss */
+/* line 47, ../sass/style.scss */
 .feature .feature-content {
   padding: 4px;
-  height: 258px;
+  height: 332px;
   overflow: hidden;
+  top: 0px;
 }
-/* line 48, ../sass/style.scss */
+/* line 54, ../sass/style.scss */
 .feature .feature-article {
   width: 225.5px;
-  height: 250px;
+  height: 324px;
   padding: 4px;
   margin-left: 4px;
   margin-right: 4px;
@@ -39,20 +50,12 @@ body {
   background-color: #666;
   overflow: hidden;
 }
-/* line 58, ../sass/style.scss */
+/* line 64, ../sass/style.scss */
 .feature .feature-article .article-title {
   border-bottom: solid 1px #fff;
+  margin-bottom: 4px;
 }
-/* line 62, ../sass/style.scss */
-.feature .feature-title {
-  width: 100%;
-  height: 20px;
-  padding: 3px;
-  clear: both;
-  background-color: #fff;
-  border-bottom: 1px solid #000;
-}
-/* line 70, ../sass/style.scss */
+/* line 69, ../sass/style.scss */
 .feature .article-figure {
   float: right;
   padding: 6px;
@@ -60,18 +63,17 @@ body {
   margin: 0px;
   width: 150px;
 }
-/* line 77, ../sass/style.scss */
+/* line 76, ../sass/style.scss */
 .feature .article-figure img {
   display: block;
   max-width: 100%;
 }
-/* line 82, ../sass/style.scss */
+/* line 81, ../sass/style.scss */
 .feature .article-figure figcaption {
   font-style: italic;
 }
 
-/* line 88, ../sass/style.scss */
+/* line 87, ../sass/style.scss */
 .feature.opened {
-  height: 292px;
   overflow: hidden;
 }
