--- a/hero/sass/style.scss
+++ b/hero/sass/style.scss
@@ -62,10 +62,11 @@ body {
 }
 
 
-.feature{
+section.feature{
 	padding: 0px;
 	width: 100%;
-	display: block;
+	overflow: hidden;
+	display: none;
 	
 	.feature-content{
 		padding: $feature-content-padding;
@@ -108,6 +109,5 @@ body {
 }
 
 .feature.opened{
-	//height: $feature-opened-height;
-	overflow: hidden;
+	display: block;
 }
