--- a/hero/sass/style.scss
+++ b/hero/sass/style.scss
@@ -28,7 +28,7 @@ body {
 	position: relative;
 	top: 150px;
 	display: block;
-	/*overflow: hidden;*/
+	overflow: hidden;
 	padding: 0px;
 }
 
@@ -70,7 +70,6 @@ section.feature{
 	padding: 0px;
 	width: $hero-width;
 	overflow: hidden;
-	/*display: none;*/
 	float: left;
 	top: 0px;
 	
