--- a/hero/stylesheets/style.css
+++ b/hero/stylesheets/style.css
@@ -1,9 +1,9 @@
-/* line 18, ../sass/style.scss */
+/* line 20, ../sass/style.scss */
 body {
   background-color: #eee;
 }
 
-/* line 22, ../sass/style.scss */
+/* line 24, ../sass/style.scss */
 #hero {
   width: 974px;
   height: 370px;
@@ -17,41 +17,46 @@ body {
   padding: 0px;
 }
 
-/* line 35, ../sass/style.scss */
+/* line 37, ../sass/style.scss */
 nav.features {
   height: 26px;
+  width: 966px;
   position: absolute;
   top: 340px;
-}
-/* line 40, ../sass/style.scss */
-nav.features ul {
-  margin: 0px;
-  margin-left: 97.4px;
-  padding: 0px;
-  height: 100%;
+  left: 2px;
+  overflow: hidden;
 }
 /* line 45, ../sass/style.scss */
+nav.features ul {
+  margin: 0px;
+  margin-left: 2px;
+  padding: 0px;
+  height: 100%;
+  width: 100%;
+}
+/* line 51, ../sass/style.scss */
 nav.features ul li {
-  width: 194.8px;
-  display: inline-block;
+  width: 241.5px;
+  display: block;
+  float: left;
   background-color: #ccc;
   text-align: center;
   height: 100%;
   margin: 0px;
   padding: 0px;
 }
-/* line 55, ../sass/style.scss */
+/* line 63, ../sass/style.scss */
 nav.features ul li.opened {
   text-decoration: overline;
 }
-/* line 59, ../sass/style.scss */
+/* line 67, ../sass/style.scss */
 nav.features ul span.feature {
   position: relative;
   height: 18px;
   top: 6px;
 }
 
-/* line 67, ../sass/style.scss */
+/* line 75, ../sass/style.scss */
 #strip {
   position: absolute;
   top: 0px;
@@ -59,7 +64,7 @@ nav.features ul span.feature {
   width: 3896px;
 }
 
-/* line 74, ../sass/style.scss */
+/* line 82, ../sass/style.scss */
 section.feature {
   padding: 0px;
   width: 974px;
@@ -67,14 +72,14 @@ section.feature {
   float: left;
   top: 0px;
 }
-/* line 81, ../sass/style.scss */
+/* line 89, ../sass/style.scss */
 section.feature .feature-content {
   padding: 4px;
   height: 332px;
   overflow: hidden;
   top: 0px;
 }
-/* line 88, ../sass/style.scss */
+/* line 96, ../sass/style.scss */
 section.feature .feature-article {
   width: 225.5px;
   height: 324px;
@@ -85,12 +90,12 @@ section.feature .feature-article {
   background-color: #666;
   overflow: hidden;
 }
-/* line 98, ../sass/style.scss */
+/* line 106, ../sass/style.scss */
 section.feature .feature-article .article-title {
   border-bottom: solid 1px #fff;
   margin-bottom: 4px;
 }
-/* line 103, ../sass/style.scss */
+/* line 111, ../sass/style.scss */
 section.feature .article-figure {
   float: right;
   padding: 6px;
@@ -98,17 +103,17 @@ section.feature .article-figure {
   margin: 0px;
   width: 150px;
 }
-/* line 110, ../sass/style.scss */
+/* line 118, ../sass/style.scss */
 section.feature .article-figure img {
   display: block;
   max-width: 100%;
 }
-/* line 115, ../sass/style.scss */
+/* line 123, ../sass/style.scss */
 section.feature .article-figure figcaption {
   font-style: italic;
 }
 
-/* line 121, ../sass/style.scss */
+/* line 129, ../sass/style.scss */
 .feature.opened {
   /*	display: block;*/
 }
