--- a/hero/sass/style.scss
+++ b/hero/sass/style.scss
@@ -3,10 +3,10 @@ $hero-height: 370px;
 $hero-padding: 4px;
 
 $features-list-outer-height: 30px;
-$features-list-outer-width: $hero-width - $hero-padding*2;
+$features-list-outer-width: $hero-width;
 $features-list-padding: 2px;
 $features-item-width: $features-list-outer-width/4;
-$features-list-margin: 2px;
+$features-list-margin: 0px;
 $features-item-line-height: 18px;
 
 $feature-content-padding: 4px;
@@ -17,8 +17,14 @@ $feature-article-height: $feature-content-height - $feature-article-padding*2;
 $feature-article-margin: 4px;
 $feature-article-width: ($hero-width - $feature-content-padding*2 - $feature-article-margin*8 - $feature-article-padding*8)/4;
 
+$light-red:#A61C1F;
+$dark-red:#711312;
+$cream:#EEEBD7;
+
+
+
 body {
-  background-color: #eee;
+  background-color: #fff;
 }
 
 #hero {
@@ -52,11 +58,12 @@ nav.features{
 			width: $features-item-width;
 			display: block;
 			float: left;
-			background-color: #ccc;
+			background-color: #C20017;
 			text-align: center;
 			height: 100%;
 			margin: 0px;
 			padding: 0px;
+			color: $cream;
 			//border: 1px solid #000;
 		}
 		
